--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <title>For Swetha ❤️</title>
   <link rel="stylesheet" href="style.css">
@@ -17,9 +18,9 @@
 <!-- PAGE 1 -->
 <div class="container" id="page1">
   <div class="big-box">
-    <h2>Hi Swetha ❤️</h2>
-    <p>It's me, Adhu</p>
-    <button onclick="goToValentine()">Click Me</button>
+    <h2>❤️💖Hi Swetha💖❤️</h2>
+    <p>It's me, Adhu, please click the button</p>
+    <button onclick="goToValentine()">Use Me😉</button>
   </div>
 </div>
 
@@ -28,26 +29,36 @@
   <div class="big-box">
     <h1>Will you be my Valentine? 💘</h1>
     <div class="buttons">
-      <button class="yes" onclick="sayYes()">YES 💖</button>
+      <button class="yes" onclick="sayYes()">YES 🤍</button>
       <button class="no" id="noBtn">NO 😈</button>
     </div>
   </div>
 </div>
 
 <!-- PAGE 3 -->
+<!-- PAGE 3 -->
 <div class="container hidden" id="page3">
   <div class="big-box">
     <h1>She said YES 😍🎉</h1>
 
-    <!-- Slideshow -->
     <div class="slideshow">
-      <img src="img1.jpg.jpeg" class="active">
+      <img src="img1.jpg.jpg" class="active">
       <img src="img2.jpg.jpeg">
       <img src="img3.jpg.jpeg">
+      <img src="img4.jpg.jpg">
+      <img src="img5.jpg.jpeg">
+      <img src="img6.jpg.jpeg">
+      <img src="img7.jpg.jpeg">
+      <img src="img8.jpg.webp">
     </div>
 
-    <!-- Typing text -->
     <p id="typedText"></p>
+
+    <!-- ❤️ Hidden Easter Egg -->
+    <p id="secretLove" class="hidden-love">
+      <h3>I love you more than words ❤️</h3>
+    </p>
+
   </div>
 </div>
 
