--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <title>For Swetha ❤️</title>
   <link rel="stylesheet" href="style.css">
@@ -18,9 +18,9 @@
 <!-- PAGE 1 -->
 <div class="container" id="page1">
   <div class="big-box">
-    <h2>❤️💖Hi Swetha💖❤️</h2>
+    <h2>❤️💖 Hi Swetha 💖❤️</h2>
     <p>It's me, Adhu, please click the button</p>
-    <button onclick="goToValentine()">Use Me😉</button>
+    <button onclick="goToValentine()">Use Me ponnappa 😉</button>
   </div>
 </div>
 
@@ -35,7 +35,6 @@
   </div>
 </div>
 
-<!-- PAGE 3 -->
 <!-- PAGE 3 -->
 <div class="container hidden" id="page3">
   <div class="big-box">
@@ -54,11 +53,41 @@
 
     <p id="typedText"></p>
 
-    <!-- ❤️ Hidden Easter Egg -->
-    <p id="secretLove" class="hidden-love">
+    <!-- <p id="secretLove" class="hidden-love">
       <h3>I love you more than words ❤️</h3>
-    </p>
+    </p> -->
 
+    <button class="letter-btn" onclick="openLetter()">Open My Small Letter 💌</button>
+  </div>
+</div>
+
+<!-- PAGE 4 -->
+<div class="container hidden" id="page4">
+  <div class="big-box letter-box">
+    <h1>A Small Letter For You 💖</h1>
+
+    <p class="love-letter">
+      My dear Ponnappa,<br><br>
+
+      From the very first moment you came into my life, everything started
+      feeling brighter and more meaningful. You are not just my girlfriend,
+      you are my best friend, my comfort, my safe place, and my happiness. 💕<br>
+
+      Your smile melts my worries, your voice calms my heart, and your presence
+      makes every ordinary moment feel special. With you, I feel understood,
+      supported, and truly loved. 🥰<br><br>
+
+      I promise to stand by your side, to support your dreams, to hold your hand
+      in difficult times, and to celebrate every little happiness with you.
+      No matter what life brings, I want to face it with you. ❤️<br>
+
+      This is my small digital gift for you on Valentine’s Day.
+      Thank you for choosing me, for trusting me, and for loving me.
+      I love you more than I can ever express in words, Swethammoo. 💖<br><br>
+
+      Forever yours,<br>
+      <b>Adhu</b> ❤️
+    </p>
   </div>
 </div>
 
