--- a/index.html
+++ b/index.html
@@ -29,9 +29,22 @@
   <div class="big-box">
     <h1>Will you be my Valentine? 💘</h1>
     <div class="buttons">
-      <button class="yes" onclick="sayYes()">YES 🤍</button>
+      <button class="yes" onclick="goToRing()">YES 🤍</button>
       <button class="no" id="noBtn">NO 😈</button>
     </div>
+  </div>
+</div>
+
+<!-- 💍 PROPOSAL RING PAGE -->
+<div class="container hidden" id="ringPage">
+  <div class="big-box ring-box">
+    <h1>💍 A Small Question...</h1>
+    <div class="ring">💍</div>
+    <p class="ring-text">
+      Will you hold my hand and walk with me forever? ❤️
+    </p>
+    <button class="letter-btn" onclick="goToSlideshow()">Say Yes 😍</button><br>
+    <h5>(Otherwise I'll kill you☺️)</h5>
   </div>
 </div>
 
@@ -49,13 +62,16 @@
       <img src="img6.jpg.jpeg">
       <img src="img7.jpg.jpeg">
       <img src="img8.jpg.webp">
+      <img src="img9.jpg.jpg">
+      <img src="img10.jpg.jpg">
+      <img src="img11.jpg.jpg">
+      <img src="img12.jpg.jpg">
+      <img src="img13.jpg.jpg">
+      <img src="img14.jpg.jpg">
+
     </div>
 
     <p id="typedText"></p>
-
-    <!-- <p id="secretLove" class="hidden-love">
-      <h3>I love you more than words ❤️</h3>
-    </p> -->
 
     <button class="letter-btn" onclick="openLetter()">Open My Small Letter 💌</button>
   </div>
@@ -68,23 +84,22 @@
 
     <p class="love-letter">
       My dear Ponnappa,<br><br>
-
       From the very first moment you came into my life, everything started
       feeling brighter and more meaningful. You are not just my girlfriend,
-      you are my best friend, my comfort, my safe place, and my happiness. 💕<br>
-
+      you are my best friend, my comfort, my safe place, and my happiness.
       Your smile melts my worries, your voice calms my heart, and your presence
       makes every ordinary moment feel special. With you, I feel understood,
-      supported, and truly loved. 🥰<br><br>
+      supported, and truly loved.I promise to stand by your side, to support 
+      your dreams, to hold your hand in difficult times, and to celebrate every
+      little happiness with you.No matter what life brings, I want to face it with you.❤️
+      I haven't given you a Valentine's Day gift yet. I'm never did anything special for
+      Valentine's Day yet. So I wanted to give you a gift like this, this is for you.❤️
+      And i wanna say something more that, Don't doubt your self, You are perfect for me
+      and You are the most beautifull person in my life i genuinely saying<br>
 
-      I promise to stand by your side, to support your dreams, to hold your hand
-      in difficult times, and to celebrate every little happiness with you.
-      No matter what life brings, I want to face it with you. ❤️<br>
-
-      This is my small digital gift for you on Valentine’s Day.
       Thank you for choosing me, for trusting me, and for loving me.
-      I love you more than I can ever express in words, Swethammoo. 💖<br><br>
-
+      I love you more than I can ever express in words, Swethammoo.💖keep smiling,
+      I really miss your smile,everything will be alright gundappa i promise.I LOVE YOU SO MUCH<br><br>
       Forever yours,<br>
       <b>Adhu</b> ❤️
     </p>
